<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/video_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_video"
                style="@style/ExoplayerStyle"
                android:layout_height="300dp"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/step_image"
                style="@style/StepImagePlaceholderStyle" />
        </FrameLayout>

        <TextView
            android:id="@+id/step_description"
            style="@style/StepDescriptionStyle"
            android:layout_below="@id/video_image_container" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
